--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: mariadb
     ports:
       - 3306:3306
+    volumes:
+      - ./dump.sql:/docker-entrypoint-initdb.d/dump.sql
     environment:
       MARIADB_ROOT_PASSWORD: admin
       MARIADB_USER: flask
