--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ click==8.1.7
 flake8==7.1.1
 Flask==3.1.0
 Flask-RESTful==0.3.10
+Flask-SQLAlchemy==3.1.1
+greenlet==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 mariadb==1.1.11
@@ -14,4 +16,7 @@ pycodestyle==2.12.1
 pyflakes==3.2.0
 pytz==2024.2
 six==1.17.0
+SQLAlchemy==2.0.36
+typing_extensions==4.12.2
 Werkzeug==3.1.3
+pymysql==1.1.1
