--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,27 @@
 aniso8601==9.0.1
 blinker==1.9.0
 click==8.1.7
+exceptiongroup==1.2.2
 flake8==7.1.1
 Flask==3.1.0
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 mariadb==1.1.11
 MarkupSafe==3.0.2
 mccabe==0.7.0
 packaging==24.2
+pluggy==1.5.0
 pycodestyle==2.12.1
 pyflakes==3.2.0
+PyMySQL==1.1.1
+pytest==8.3.4
 pytz==2024.2
 six==1.17.0
 SQLAlchemy==2.0.36
+tomli==2.2.1
 typing_extensions==4.12.2
 Werkzeug==3.1.3
-pymysql==1.1.1
