--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
 aniso8601==9.0.1
 blinker==1.9.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
 click==8.1.7
+Deprecated==1.2.15
 exceptiongroup==1.2.2
 flake8==7.1.1
 Flask==3.1.0
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
+googleapis-common-protos==1.66.0
 greenlet==3.1.1
+grpcio==1.68.1
+idna==3.10
+importlib_metadata==8.5.0
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
@@ -15,14 +22,21 @@ MarkupSafe==3.0.2
 mccabe==0.7.0
 packaging==24.2
 pluggy==1.5.0
+prometheus_client==0.21.1
+prometheus_flask_exporter==0.23.1
+protobuf==5.29.2
 pycodestyle==2.12.1
 pyflakes==3.2.0
 PyJWT==2.10.1
 PyMySQL==1.1.1
 pytest==8.3.4
 pytz==2024.2
+requests==2.32.3
 six==1.17.0
 SQLAlchemy==2.0.36
 tomli==2.2.1
 typing_extensions==4.12.2
+urllib3==2.3.0
 Werkzeug==3.1.3
+wrapt==1.17.0
+zipp==3.21.0
